Finish using maybe. Chapter 3

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
       #thumbnails { width: 440px; float: left }
       h1 { font-family: Verdana; color: #60b5cc; }
     </style>
+    <link rel="stylesheet" href="http://elm-in-action.com/styles.css">
+
   </head>
   <body>
     <div id="elm-area"></div>
